--- a/css/styles.css
+++ b/css/styles.css
@@ -114,3 +114,61 @@ nav.navbar{
         padding-bottom: 3rem;
     }
 }
+
+.text-center img.rounded-circle {
+    border: 2px solid #007bff;
+    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.text-center h4 {
+    color: #333;
+}
+
+.text-center p {
+    color: #555;
+    font-size: 0.9rem;
+}
+
+.header-text-green {
+    background-color: #d4edda; /* Verde claro */
+    color: #155724; /* Texto em verde escuro */
+    padding: 10px;
+    border-radius: 5px;
+    font-weight: bold;
+    text-align: center;
+}
+
+.content {
+    background-color: #ffffff; /* Fundo branco para todo o conteúdo */
+    padding: 20px;
+}
+
+/* Justificar o texto nas páginas "integrantes" e "sobre o projeto" */
+.content-sobre .conteudo p,
+.content-integrantes .conteudo p {
+    text-align: justify;
+}
+
+.content-integrantes .row {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px;
+    justify-content: center;
+}
+
+.content-integrantes .integrante {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 250px;
+}
+
+.content-integrantes .card-title {
+    font-size: 1.1rem;
+    margin-top: 10px;
+}
+
+.content-integrantes .card-text {
+    font-size: 0.9rem;
+    text-align: justify;
+}
